--- a/build.gradle
+++ b/build.gradle
@@ -9,11 +9,24 @@
 // Apply the java-library plugin to add support for Java Library
 apply plugin: 'java-library'
 apply plugin: 'eclipse'
+apply plugin: 'maven-publish'
+
+version = 0.2
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            groupId 'com.lankheet.iot'
+            // artifactId 'project1-sample'
+            version '0.2'
+
+            from components.java
+        }
+    }
+}
 
 // In this section you declare where to find the dependencies of your project
 repositories {
-    // Use jcenter for resolving your dependencies.
-    // You can declare any Maven/Ivy/file repository here.
     mavenCentral()
 }
 
@@ -22,8 +35,12 @@ dependencies {
     compile 'com.fasterxml.jackson.core:jackson-core:2.8.1'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.8.1'
     compile 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.8.1'
-    
+    compile 'org.hibernate:hibernate-core:5.2.10.Final'
+    compile 'org.hibernate:hibernate-entitymanager:5.2.10.Final'
+ 
+    testCompile 'org.jmockit:jmockit:1.35'
     testCompile 'junit:junit:4.12'
     testCompile 'org.hamcrest:hamcrest-junit:2.0.0.0'
 }
+
 
