Add version number table to build script

--- a/build.gradle
+++ b/build.gradle
@@ -20,17 +20,25 @@ repositories {
     mavenCentral()
 }
 
-dependencies {
-    compile 'org.slf4j:slf4j-api:1.7.25'
-    compile 'org.apache.logging.log4j:log4j-slf4j-impl:2.10.0'
-    compile 'com.fasterxml.jackson.core:jackson-core:2.8.1'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.8.1'
-    compile 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.8.1'
-    compile 'org.hibernate:hibernate-core:5.2.10.Final'
-    compile 'org.hibernate:hibernate-entitymanager:5.2.10.Final'
+ext {
+    junitVersion = '4.+'
+    slf4jVersion = '1.7.25'
+    jmockitVersion = '1.35'
+    jacksonVersion = '2.8.1'
+    hibernateVersion = '5.2.10.Final'
+}
 
-    testCompile 'org.jmockit:jmockit:1.35'
-    testCompile 'junit:junit:4.12'
+dependencies {
+    compile group: 'org.slf4j', name: 'slf4j-api', version: slf4jVersion
+    compile group: 'org.slf4j', name: 'slf4j-simple', version: slf4jVersion
+    compile group: 'com.fasterxml.jackson.core', name:'jackson-core', version: jacksonVersion
+    compile group: 'com.fasterxml.jackson.core', name:'jackson-databind', version: jacksonVersion
+    compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: jacksonVersion
+    compile group: 'org.hibernate', name: 'hibernate-core', version: hibernateVersion
+    compile group: 'org.hibernate', name: 'hibernate-entitymanager', version: hibernateVersion
+
+    testCompile group: 'org.jmockit', name: 'jmockit', version: jmockitVersion
+    testCompile group: 'junit', name: 'junit', version: junitVersion
     testCompile 'org.hamcrest:hamcrest-junit:2.0.0.0'
 }
 
