--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     testCompile group: 'org.apache.derby', name: 'derby', version: '10.14.1.0'
     compile group: 'com.fasterxml.jackson.core', name:'jackson-core', version: jacksonVersion
+    compile group: 'com.fasterxml.jackson.core', name:'jackson-annotations', version: jacksonVersion
     compile group: 'com.fasterxml.jackson.core', name:'jackson-databind', version: jacksonVersion
     compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: jacksonVersion
     compile group: 'org.hibernate', name: 'hibernate-core', version: hibernateVersion
