Move to final version 0.4

--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,12 @@ apply plugin: 'java-library'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = '0.4-SNAPSHOT'
+version = '0.4-FINAL'
+
+task sourceJar(type: Jar) {
+    classifier 'sources'
+    from sourceSets.main.allJava
+}
 
 publishing {
     publications {
@@ -12,6 +17,7 @@ publishing {
             version project.version
 
             from components.java
+            artifact tasks.sourceJar
         }
     }
 }
