--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'java-library'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = '0.5-SNAPSHOT'
+version = '0.5.1-SNAPSHOT'
 
 task sourceJar(type: Jar) {
     classifier 'sources'
@@ -23,6 +23,7 @@ publishing {
 }
 
 repositories {
+	mavenLocal()
     mavenCentral()
 }
 
@@ -35,13 +36,16 @@ ext {
 
 dependencies {
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
-    testCompile group: 'org.apache.derby', name: 'derby', version: '10.14.1.0'
+//    compile group: 'io.swagger', name: 'swagger-annotations', version: '1.5.21'
+    compile group: 'com.smoketurner', name: 'dropwizard-swagger', version: '1.3.8-1'
+
     compile group: 'com.fasterxml.jackson.core', name:'jackson-core', version: jacksonVersion
     compile group: 'com.fasterxml.jackson.core', name:'jackson-annotations', version: jacksonVersion
     compile group: 'com.fasterxml.jackson.core', name:'jackson-databind', version: jacksonVersion
     compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: jacksonVersion
     compile group: 'org.hibernate', name: 'hibernate-core', version: hibernateVersion
 
+    testCompile group: 'org.apache.derby', name: 'derby', version: '10.14.1.0'
     testCompile group: 'org.jmockit', name: 'jmockit', version: jmockitVersion
     testCompile group: 'junit', name: 'junit', version: junitVersion
     testCompile 'org.hamcrest:hamcrest-junit:2.0.0.0'
