Gradle upgrade, wrapper added, build config updated

--- a/build.gradle
+++ b/build.gradle
@@ -1,52 +1,50 @@
+repositories{
+   mavenLocal()
+   mavenCentral()
+}
+
 apply plugin: 'java-library'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
 version = '0.5.1-SNAPSHOT'
 
-task sourceJar(type: Jar) {
-    classifier 'sources'
-    from sourceSets.main.allJava
+task sourceJar(type: Jar){
+   classifier 'sources'
+   from sourceSets.main.allJava
 }
 
-publishing {
-    publications {
-        maven(MavenPublication) {
-            groupId 'com.lankheet.iot'
-            artifactId 'datatypes'
-            version project.version
+publishing{
+   publications{
+      maven(MavenPublication){
+         groupId 'com.lankheet.iot'
+         artifactId 'datatypes'
+         version project.version
 
-            from components.java
-            artifact tasks.sourceJar
-        }
-    }
+         from components.java
+         artifact tasks.sourceJar
+      }
+   }
 }
 
-repositories {
-	mavenLocal()
-    mavenCentral()
+ext{
+   junitVersion = '4.+'
+   jmockitVersion = '1.35'
+   jacksonVersion = '2.8.1'
+   hibernateVersion = '5.2.10.Final'
 }
 
-ext {
-    junitVersion = '4.+'
-    jmockitVersion = '1.35'
-    jacksonVersion = '2.8.1'
-    hibernateVersion = '5.2.10.Final'
-}
+dependencies{
+   implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.11'
 
-dependencies {
-    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
-//    compile group: 'io.swagger', name: 'swagger-annotations', version: '1.5.21'
-    compile group: 'com.smoketurner', name: 'dropwizard-swagger', version: '1.3.8-1'
+   implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.13.3'
+   implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.13.3'
+   implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.3'
+   implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.13.3'
+   implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.6.8.Final'
 
-    compile group: 'com.fasterxml.jackson.core', name:'jackson-core', version: jacksonVersion
-    compile group: 'com.fasterxml.jackson.core', name:'jackson-annotations', version: jacksonVersion
-    compile group: 'com.fasterxml.jackson.core', name:'jackson-databind', version: jacksonVersion
-    compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: jacksonVersion
-    compile group: 'org.hibernate', name: 'hibernate-core', version: hibernateVersion
-
-    testCompile group: 'org.apache.derby', name: 'derby', version: '10.14.1.0'
-    testCompile group: 'org.jmockit', name: 'jmockit', version: jmockitVersion
-    testCompile group: 'junit', name: 'junit', version: junitVersion
-    testCompile 'org.hamcrest:hamcrest-junit:2.0.0.0'
+   testImplementation group: 'org.apache.derby', name: 'derby', version: '10.14.1.0'
+   testImplementation group: 'org.jmockit', name: 'jmockit', version: '1.41'
+   testImplementation group: 'junit', name: 'junit', version: junitVersion
+   testImplementation 'org.hamcrest:hamcrest-junit:2.0.0.0'
 }
