--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'java-library'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = '0.5.1-SNAPSHOT'
+version = '0.6.0-SNAPSHOT'
 
 task sourceJar(type: Jar){
    classifier 'sources'
@@ -45,11 +45,15 @@ dependencies{
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.14.0'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.14.0'
    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.14.0'
-   implementation group: 'jakarta.persistence', name: 'jakarta.persistence-api', version: '3.0.0'
+   compileOnly group: 'jakarta.platform', name: 'jakarta.jakartaee-api', version: '10.0.0'
 
-   testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.7.2'
+   testImplementation group: 'org.junit.platform', name: 'junit-platform-runner', version: '1.9.0'
+   testImplementation group: 'org.hibernate', name: 'hibernate-core', version: '6.1.6.Final'
+   testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.9.0'
+   testImplementation group: 'jakarta.platform', name: 'jakarta.jakartaee-api', version: '10.0.0'
    testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.11.2'
    testImplementation group: 'org.mockito', name: 'mockito-inline', version: '3.11.2'
-   testImplementation group: 'org.junit.platform', name: 'junit-platform-runner', version: '1.7.1'
+   // derby 10.14.2.0 is highest working version for unit tests (10.15.2.0 fails unit tests)
+   testImplementation group: 'org.apache.derby', name: 'derby', version: '10.14.2.0'
    testImplementation 'org.hamcrest:hamcrest-junit:2.0.0.0'
 }
