--- a/build.gradle
+++ b/build.gradle
@@ -38,13 +38,22 @@ ext{
 }
 
 dependencies{
-   implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.4.4'
+   implementation group: 'org.lankheet.domiot', name: 'domiot-rest-api', version: '1.1.1-SNAPSHOT'
 
+   implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.4.12'
+   implementation group: 'org.springframework.data', name: 'spring-data-jpa', version: '3.1.2'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.14.0'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.14.0'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.14.0'
    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.14.0'
    compileOnly group: 'jakarta.platform', name: 'jakarta.jakartaee-api', version: '10.0.0'
+   implementation group: 'org.mapstruct', name: 'mapstruct', version: '1.5.5.Final'
+   implementation group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.5.5.Final'
+   compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.28'
+   implementation group: 'org.projectlombok', name: 'lombok-mapstruct-binding', version: '0.2.0'
+
+   annotationProcessor 'org.projectlombok:lombok:1.18.30'
+   annotationProcessor group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.5.5.Final'
 
    testImplementation group: 'org.junit.platform', name: 'junit-platform-runner', version: '1.9.0'
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.9.0'
@@ -56,7 +65,7 @@ dependencies{
    testImplementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.22'
    testImplementation group: 'org.junit.platform', name: 'junit-platform-runner', version: '1.9.0'
    // Highest Derby version with EmbeddedDriver
-   testImplementation group: 'org.apache.derby', name: 'derby', version: '10.14.2.0'
+   testImplementation group: 'org.apache.derby', name: 'derby', version: '10.15.2.0'
    testImplementation 'org.hibernate:hibernate-core:6.1.7.Final'
    testImplementation group: 'org.hibernate', name: 'hibernate-entitymanager', version: '5.6.10.Final'
 
