Introduce mqtt domain model

--- a/build.gradle
+++ b/build.gradle
@@ -1,73 +1,73 @@
-repositories{
-   mavenLocal()
-   mavenCentral()
+repositories {
+    mavenLocal()
+    mavenCentral()
 }
 
 apply plugin: 'java-library'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-task sourceJar(type: Jar){
-   classifier 'sources'
-   from sourceSets.main.allJava
+java {
+    withSourcesJar()
+    withJavadocJar()
+}
+
+task sourceJar(type: Jar) {
+    classifier 'sources'
+    from sourceSets.main.allJava
 }
 
 version findProperty('version')
 
-publishing{
-   publications{
-      maven(MavenPublication){
-         groupId findProperty('group')
-         artifactId findProperty('name')
-         version findProperty('version')
+publishing {
+    publications {
+        maven(MavenPublication) {
+            groupId findProperty('group')
+            artifactId findProperty('name')
+            version findProperty('version')
 
-         from components.java
-      }
-   }
+            from components.java
+        }
+    }
 }
 
-test{
-   ignoreFailures = !project.hasProperty('release')
-   // Workaround voor als Intellij je testen niet kan vinden wanneer je Gradle als executer gebruikt.
-   useJUnitPlatform()
+test {
+    ignoreFailures = !project.hasProperty('release')
+    useJUnitPlatform()
 }
 
-ext{
-   jacksonVersion = '2.8.1'
-   hibernateVersion = '5.2.10.Final'
+ext {
+    jacksonVersion = '2.8.1'
+    hibernateVersion = '5.2.10.Final'
 }
 
-dependencies{
-   implementation group: 'org.lankheet.domiot', name: 'domiot-rest-api', version: '1.1.1-SNAPSHOT'
+dependencies {
+    implementation group: 'org.lankheet.domiot', name: 'domiot-rest-api', version: '1.1.1-SNAPSHOT'
 
-   implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.4.12'
-   implementation group: 'org.springframework.data', name: 'spring-data-jpa', version: '3.1.2'
-   implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.14.0'
-   implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.14.0'
-   implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.14.0'
-   implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.14.0'
-   compileOnly group: 'jakarta.platform', name: 'jakarta.jakartaee-api', version: '10.0.0'
-   implementation group: 'org.mapstruct', name: 'mapstruct', version: '1.5.5.Final'
-   implementation group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.5.5.Final'
-   compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.28'
-   implementation group: 'org.projectlombok', name: 'lombok-mapstruct-binding', version: '0.2.0'
+    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.4.12'
+    implementation group: 'org.springframework.data', name: 'spring-data-jpa', version: '3.1.2'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.14.0'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.15.1'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.15.1'
+    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.14.0'
+    compileOnly group: 'jakarta.platform', name: 'jakarta.jakartaee-api', version: '10.0.0'
+    implementation group: 'org.mapstruct', name: 'mapstruct', version: '1.5.5.Final'
+    implementation group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.5.5.Final'
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.28'
+    implementation group: 'org.projectlombok', name: 'lombok-mapstruct-binding', version: '0.2.0'
 
-   annotationProcessor 'org.projectlombok:lombok:1.18.30'
-   annotationProcessor group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.5.5.Final'
+    annotationProcessor 'org.projectlombok:lombok:1.18.30'
+    annotationProcessor group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.5.5.Final'
 
-   testImplementation group: 'org.junit.platform', name: 'junit-platform-runner', version: '1.9.0'
-   testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.9.0'
-   testImplementation group: 'jakarta.platform', name: 'jakarta.jakartaee-api', version: '10.0.0'
-   testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.11.2'
-   testImplementation group: 'org.mockito', name: 'mockito-inline', version: '3.11.2'
-   // derby 10.14.2.0 is highest working version for unit tests (10.15.2.0 fails unit tests)
-   testImplementation 'jakarta.platform:jakarta.jakartaee-web-api:9.1.0'
-   testImplementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.22'
-   testImplementation group: 'org.junit.platform', name: 'junit-platform-runner', version: '1.9.0'
-   // Highest Derby version with EmbeddedDriver
-   testImplementation group: 'org.apache.derby', name: 'derby', version: '10.15.2.0'
-   testImplementation 'org.hibernate:hibernate-core:6.1.7.Final'
-   testImplementation group: 'org.hibernate', name: 'hibernate-entitymanager', version: '5.6.10.Final'
+    testImplementation group: 'org.junit.platform', name: 'junit-platform-runner', version: '1.9.0'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.9.0'
+    testImplementation group: 'jakarta.platform', name: 'jakarta.jakartaee-api', version: '10.0.0'
+    testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.11.2'
+    testImplementation group: 'org.mockito', name: 'mockito-inline', version: '3.11.2'
+    testImplementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.22'
+    testImplementation group: 'org.junit.platform', name: 'junit-platform-runner', version: '1.9.0'
+    testImplementation 'org.hibernate:hibernate-core:6.2.7.Final'
+    testImplementation group: 'org.hibernate', name: 'hibernate-entitymanager', version: '5.6.15.Final'
 
-   testImplementation 'org.hamcrest:hamcrest-junit:2.0.0.0'
+    testImplementation 'org.hamcrest:hamcrest-junit:2.0.0.0'
 }
